--- a/main.html
+++ b/main.html
@@ -4,10 +4,43 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Welcome to Sync5</h1>
+	<div class="card">
+		<h5 class="card-header">New Features</h5>
+		<div class="card-body">
+		  <h5 class="card-title">Mobile and Tablet support</h5>
+		  <p class="card-text">"With this new update you will be able to sync your work across large number of platforms.</p>
+		  <a href="#" class="btn btn-primary">Read more</a>
+		</div>
+		<br><br>
+		<div class="row">
+			<div class="card text-white bg-danger mb-3" style="max-width: 18rem;">
+				<div class="card-header">Alert</div>
+				<div class="card-body">
+				  <h5 class="card-title">Node Dead</h5>
+				  <p class="card-text">Node 5 (east-us) is offline for last 12 days.</p>
+				</div>
+			  </div>
+			<div class="card" style="width: 18rem;">
+				<img src="president.jpg" class="card-img-top" alt="president image">
+				<div class="card-body">
+				  <h5 class="card-title">President under Pressure</h5>
+				  <p class="card-text">The US president is under pressure to respond to a widespread cyber-attack linked to China</p>
+				</div>  
+				
+				<div class="card-footer">Last updated 12 mins ago</div>
+			</div>
+		</div>
+			  
+	</div>
+		
+		
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script type="text/javascript" src="./script.js">
 </script>
 
