--- a/main.html
+++ b/main.html
@@ -18,7 +18,7 @@
 		  <a href="#" class="btn btn-primary">Read more</a>
 		</div>
 		<br><br>
-		<div class="row">
+		<div class="card-deck row">
 			<div class="card text-white bg-danger mb-3" style="max-width: 18rem;">
 				<div class="card-header">Alert</div>
 				<div class="card-body">
@@ -33,7 +33,7 @@
 				  <p class="card-text">The US president is under pressure to respond to a widespread cyber-attack linked to China</p>
 				</div>  
 				
-				<div class="card-footer">Last updated 12 mins ago</div>
+				<div class="text-muted">Last updated 12 mins ago</div>
 			</div>
 		</div>
 			  
